Abstract + Intro for Part 0

--- a/paper/diagonalsPermutahedra.bib
+++ b/paper/diagonalsPermutahedra.bib
@@ -412,3 +412,96 @@
 	NUMBER = {6},
 	PAGES = {2353--2372},
 }
+
+%%%%New from July 26
+
+@article{BergstromMinabe,
+  title = {On the Cohomology of the {{Losev}}\textendash{{Manin}} Moduli Space},
+  author = {Bergstr{\"o}m, Jonas and Minabe, Satoshi},
+  year = {2014},
+  month = may,
+  journal = {Manuscripta Mathematica},
+  volume = {144},
+  number = {1},
+  pages = {241--252},
+  issn = {1432-1785},
+  doi = {10.1007/s00229-013-0647-5},
+}
+
+@article{Lin,
+  title = {Graph Cohomology},
+  author = {Lin, Matthew},
+  year = {2016},
+  journal = {Ph.D. Thesis, Harvey Mudd College},
+  pages = {Available online at},
+  url = {https://scholarship.claremont.edu/hmc_theses/82/}
+}
+
+@article{BilleraSturmfels,
+  title = {Fiber {{Polytopes}}},
+  author = {Billera, Louis J. and Sturmfels, Bernd},
+  year = {1992},
+  journal = {Annals of Mathematics},
+  volume = {135},
+  number = {3},
+  eprint = {2946575},
+  eprinttype = {jstor},
+  pages = {527--549},
+  publisher = {{Annals of Mathematics}},
+  issn = {0003-486X},
+  doi = {10.2307/2946575},
+}
+
+@article{Proute,
+  title = {A{\textsubscript{{$\infty$}}}-Structures. {{Mod\`eles}} Minimaux de {{Baues-Lemaire}} et {{Kadeishvili}} et Homologie Des Fibrations},
+  author = {Prout{\'e}, Alain},
+  year = {2011},
+  journal = {Reprints in Theory and Applications of Categories},
+  number = {21},
+  pages = {1--99},
+  fjournal = {Reprints in Theory and Applications of Categories}
+}
+
+@article{SaneblidzeRivera,
+  title = {A Combinatorial Model for the Free Loop Fibration},
+  author = {Rivera, Manuel and Saneblidze, Samson},
+  year = {2018},
+  journal = {Bulletin of the London Mathematical Society},
+  volume = {50},
+  number = {6},
+  pages = {1085--1101},
+  issn = {1469-2120},
+  doi = {10.1112/blms.12202},
+}
+
+@misc{BostanChyzakPilaud,
+  title = {Refined Product Formulas for {{Tamari}} Intervals},
+  author = {Bostan, Alin and Chyzak, Fr{\'e}d{\'e}ric and Pilaud, Vincent},
+  year = {2023},
+  month = apr,
+  number = {arXiv:2303.10986},
+  eprint = {2303.10986},
+  primaryclass = {math},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2303.10986},
+}
+
+@article{Postnikov,
+   AUTHOR = {Alexander Postnikov},
+    TITLE = {Permutohedra, associahedra, and beyond},
+  JOURNAL = {Int. Math. Res. Not. IMRN},
+     VOLUME = {6},
+     YEAR = {2009},
+    PAGES = {1026--1106},
+}
+
+@misc{DotsenkoKeilthyLyskov,
+  title = {Reconnectads},
+  author = {Dotsenko, Vladimir and Keilthy, Adam and Lyskov, Denis},
+  year = {2022},
+  number = {arXiv:2211.15754},
+  eprint = {2211.15754},
+  primaryclass = {math},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2211.15754},
+}
